--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">sample</string>
+
+    <string name="location">latitude: %f, longitude: %f</string>
+
 </resources>
